force-app/main/default/objects/sfm_AiAgentMoment__dll/fields/AiAgentVersionApiName__c.field-meta.xml
<CustomField>
    <fullName>AiAgentVersionApiName__c</fullName>
    <label>AI Agent Version API Name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>AiAgentVersionApiName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>