force-app/main/default/objects/sfm_AiAgentMoment__dll/fields/EndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EndTimestamp__c</fullName>
    <label>End Timestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EndTimestamp</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>