force-app/main/default/objects/sfm_AiAgentMoment__dll/fields/RequestSummaryText__c.field-meta.xml
<CustomField>
    <fullName>RequestSummaryText__c</fullName>
    <label>Request Summary Text</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RequestSummaryText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>