force-app/main/default/objects/sfm_AiAgentMoment__dll/fields/ResponseSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ResponseSummaryText__c</fullName>
    <label>Response Summary Text</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ResponseSummaryText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>